crates/ty_python_semantic/resources/mdtest/snapshots/isinstance.md_-_Narrowing_for_`isins…_-_`classinfo`_is_an_in…_(eeef56c0ef87a30b).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 621
expression: snapshot
---

---
mdtest name: isinstance.md - Narrowing for `isinstance` checks - `classinfo` is an invalid PEP-604 union of types
mdtest path: crates/ty_python_semantic/resources/mdtest/narrow/isinstance.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Any, Literal, NamedTuple
 2 | 
 3 | def _(x: int | list[int] | bytes):
 4 |     # error: [invalid-argument-type]
 5 |     if isinstance(x, list[int] | int):
 6 |         reveal_type(x)  # revealed: int | list[int] | bytes
 7 |     # error: [invalid-argument-type]
 8 |     elif isinstance(x, Literal[42] | list[int] | bytes):
 9 |         reveal_type(x)  # revealed: int | list[int] | bytes
10 |     # error: [invalid-argument-type]
11 |     elif isinstance(x, Any | NamedTuple | list[int]):
12 |         reveal_type(x)  # revealed: int | list[int] | bytes
13 |     # error: [invalid-argument-type]
14 |     elif isinstance(x, (list[int] | bytes, int)):
15 |         reveal_type(x)  # revealed: int | list[int] | bytes
16 |     # error: [invalid-argument-type]
17 |     elif isinstance(x, (int, str | Literal[42])):
18 |         reveal_type(x)  # revealed: int | list[int] | bytes
19 |     # error: [invalid-argument-type]
20 |     elif isinstance(x, (int, (str, (bytes, memoryview | Literal[42])))):
21 |         reveal_type(x)  # revealed: int | list[int] | bytes
22 |     else:
23 |         reveal_type(x)  # revealed: int | list[int] | bytes
24 | def _(x: int | list[int] | bytes):
25 |     # error: [invalid-argument-type]
26 |     if isinstance(x, (int, list[int] | bytes)):
27 |         reveal_type(x)  # revealed: int | list[int] | bytes
28 |     else:
29 |         reveal_type(x)  # revealed: int | list[int] | bytes
30 | def _(x: int | list[int] | bytes):
31 |     # error: [invalid-argument-type]
32 |     if isinstance(x, (int, (str, list[int] | bytes))):
33 |         reveal_type(x)  # revealed: int | list[int] | bytes
34 |     else:
35 |         reveal_type(x)  # revealed: int | list[int] | bytes
36 | classes = (int, list[int] | bytes)
37 | 
38 | def _(x: int | list[int] | bytes):
39 |     # error: [invalid-argument-type]
40 |     if isinstance(x, classes):
41 |         reveal_type(x)  # revealed: int | list[int] | bytes
42 |     else:
43 |         reveal_type(x)  # revealed: int | list[int] | bytes
```

# Diagnostics

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
 --> src/mdtest_snippet.py:5:8
  |
3 | def _(x: int | list[int] | bytes):
4 |     # error: [invalid-argument-type]
5 |     if isinstance(x, list[int] | int):
  |        ^^^^^^^^^^^^^^---------------^
  |                      |
  |                      This `UnionType` instance contains non-class elements
6 |         reveal_type(x)  # revealed: int | list[int] | bytes
7 |     # error: [invalid-argument-type]
  |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:8:10
   |
 6 |         reveal_type(x)  # revealed: int | list[int] | bytes
 7 |     # error: [invalid-argument-type]
 8 |     elif isinstance(x, Literal[42] | list[int] | bytes):
   |          ^^^^^^^^^^^^^^-------------------------------^
   |                        |
   |                        This `UnionType` instance contains non-class elements
 9 |         reveal_type(x)  # revealed: int | list[int] | bytes
10 |     # error: [invalid-argument-type]
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Elements `<special-form 'Literal[42]'>` and `<class 'list[int]'>` in the union are not class objects
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:11:10
   |
 9 |         reveal_type(x)  # revealed: int | list[int] | bytes
10 |     # error: [invalid-argument-type]
11 |     elif isinstance(x, Any | NamedTuple | list[int]):
   |          ^^^^^^^^^^^^^^----------------------------^
   |                        |
   |                        This `UnionType` instance contains non-class elements
12 |         reveal_type(x)  # revealed: int | list[int] | bytes
13 |     # error: [invalid-argument-type]
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<special-form 'typing.Any'>` in the union, and 2 more elements, are not class objects
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:14:10
   |
12 |         reveal_type(x)  # revealed: int | list[int] | bytes
13 |     # error: [invalid-argument-type]
14 |     elif isinstance(x, (list[int] | bytes, int)):
   |          ^^^^^^^^^^^^^^^-----------------^^^^^^^
   |                         |
   |                         This `UnionType` instance contains non-class elements
15 |         reveal_type(x)  # revealed: int | list[int] | bytes
16 |     # error: [invalid-argument-type]
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:17:10
   |
15 |         reveal_type(x)  # revealed: int | list[int] | bytes
16 |     # error: [invalid-argument-type]
17 |     elif isinstance(x, (int, str | Literal[42])):
   |          ^^^^^^^^^^^^^^^^^^^^-----------------^^
   |                              |
   |                              This `UnionType` instance contains non-class elements
18 |         reveal_type(x)  # revealed: int | list[int] | bytes
19 |     # error: [invalid-argument-type]
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<special-form 'Literal[42]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:20:10
   |
18 |         reveal_type(x)  # revealed: int | list[int] | bytes
19 |     # error: [invalid-argument-type]
20 |     elif isinstance(x, (int, (str, (bytes, memoryview | Literal[42])))):
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------------^^^^
   |                                            |
   |                                            This `UnionType` instance contains non-class elements
21 |         reveal_type(x)  # revealed: int | list[int] | bytes
22 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<special-form 'Literal[42]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:26:8
   |
24 | def _(x: int | list[int] | bytes):
25 |     # error: [invalid-argument-type]
26 |     if isinstance(x, (int, list[int] | bytes)):
   |        ^^^^^^^^^^^^^^^^^^^^-----------------^^
   |                            |
   |                            This `UnionType` instance contains non-class elements
27 |         reveal_type(x)  # revealed: int | list[int] | bytes
28 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:32:8
   |
30 | def _(x: int | list[int] | bytes):
31 |     # error: [invalid-argument-type]
32 |     if isinstance(x, (int, (str, list[int] | bytes))):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^-----------------^^^
   |                                  |
   |                                  This `UnionType` instance contains non-class elements
33 |         reveal_type(x)  # revealed: int | list[int] | bytes
34 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:40:8
   |
38 | def _(x: int | list[int] | bytes):
39 |     # error: [invalid-argument-type]
40 |     if isinstance(x, classes):
   |        ^^^^^^^^^^^^^^^^^^^^^^
41 |         reveal_type(x)  # revealed: int | list[int] | bytes
42 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<class 'list[int]'>` in the union `list[int] | bytes` is not a class object
info: rule `invalid-argument-type` is enabled by default

```
