crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Boolean_parameters_m…_(3edf97b20f58fa11).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Boolean parameters must be unambiguous
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import TypeVar
 2 | 
 3 | def cond() -> bool:
 4 |     return True
 5 | 
 6 | # error: [invalid-legacy-type-variable]
 7 | T = TypeVar("T", covariant=cond())
 8 | 
 9 | # error: [invalid-legacy-type-variable]
10 | U = TypeVar("U", contravariant=cond())
11 | 
12 | # error: [invalid-legacy-type-variable]
13 | V = TypeVar("V", infer_variance=cond())
```

# Diagnostics

```
error[invalid-legacy-type-variable]: The `covariant` parameter of `TypeVar` cannot have an ambiguous truthiness
 --> src/mdtest_snippet.py:7:28
  |
7 | T = TypeVar("T", covariant=cond())
  |                            ^^^^^^
  |

```

```
error[invalid-legacy-type-variable]: The `contravariant` parameter of `TypeVar` cannot have an ambiguous truthiness
  --> src/mdtest_snippet.py:10:32
   |
10 | U = TypeVar("U", contravariant=cond())
   |                                ^^^^^^
   |

```

```
error[invalid-legacy-type-variable]: The `infer_variance` parameter of `TypeVar` cannot have an ambiguous truthiness
  --> src/mdtest_snippet.py:13:33
   |
13 | V = TypeVar("V", infer_variance=cond())
   |                                 ^^^^^^
   |

```
