crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Invalid_constrained_…_(aef6cc7e670e406f).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Invalid constrained default from unbounded type variable
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import TypeVar
2 | 
3 | T = TypeVar("T")
4 | 
5 | # error: [invalid-type-variable-default]
6 | S = TypeVar("S", int, str, default=T)
```

# Diagnostics

```
error[invalid-type-variable-default]: An unbounded TypeVar cannot be used as the default for a constrained TypeVar
 --> src/mdtest_snippet.py:3:1
  |
1 | from typing_extensions import TypeVar
2 |
3 | T = TypeVar("T")
  | ---------------- `T` defined here
4 |
5 | # error: [invalid-type-variable-default]
6 | S = TypeVar("S", int, str, default=T)
  |                                    ^
  |
info: `T` has no bound or constraints
info: rule `invalid-type-variable-default` is enabled by default

```
