crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Invalid_default_with…_(2c741a7f94341b64).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Invalid default with constraints
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import TypeVar
2 | 
3 | # error: [invalid-type-variable-default]
4 | T = TypeVar("T", int, str, default=bytes)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `bytes` is not one of the constrained types
 --> src/mdtest_snippet.py:4:36
  |
3 | # error: [invalid-type-variable-default]
4 | T = TypeVar("T", int, str, default=bytes)
  |                                    ^^^^^
  |
info: rule `invalid-type-variable-default` is enabled by default

```
