crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Invalid_default_with…_(4f3e1c61b14dfdd4).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Invalid default with bound
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing_extensions import TypeVar
2 | 
3 | # error: [invalid-type-variable-default]
4 | T = TypeVar("T", bound=str, default=int)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `int` is not assignable to bound `str`
 --> src/mdtest_snippet.py:4:37
  |
3 | # error: [invalid-type-variable-default]
4 | T = TypeVar("T", bound=str, default=int)
  |                                     ^^^
  |
info: rule `invalid-type-variable-default` is enabled by default

```
