crates/ty_python_semantic/resources/mdtest/snapshots/legacy_typevars.md_-_Legacy_typevar_creat…_-_Invalid_keyword_argu…_(39164266ada3dc2f).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: legacy_typevars.md - Legacy typevar creation diagnostics - Invalid keyword arguments
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/legacy_typevars.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import TypeVar
2 | 
3 | # error: [invalid-legacy-type-variable]
4 | T = TypeVar("T", invalid_keyword=True)
```

# Diagnostics

```
error[invalid-legacy-type-variable]: Unknown keyword argument `invalid_keyword` in `TypeVar` creation
 --> src/mdtest_snippet.py:4:18
  |
4 | T = TypeVar("T", invalid_keyword=True)
  |                  ^^^^^^^^^^^^^^^^^^^^
  |

```
